--- a/classificacao_qualidade_frutas.ipynb
+++ b/classificacao_qualidade_frutas.ipynb
@@ -3842,6 +3842,258 @@
     "# BoxPlot Quality x Size\n",
     "px.box(df_frutas, x='Quality', y='Size', color='Quality')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "76e54686",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>T</th>\n",
+       "      <th>dof</th>\n",
+       "      <th>alternative</th>\n",
+       "      <th>p-val</th>\n",
+       "      <th>CI95%</th>\n",
+       "      <th>cohen-d</th>\n",
+       "      <th>BF10</th>\n",
+       "      <th>power</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>T-test</th>\n",
+       "      <td>0.089906</td>\n",
+       "      <td>3599.742464</td>\n",
+       "      <td>two-sided</td>\n",
+       "      <td>0.928367</td>\n",
+       "      <td>[-0.09, 0.1]</td>\n",
+       "      <td>0.002841</td>\n",
+       "      <td>0.036</td>\n",
+       "      <td>0.050925</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               T          dof alternative     p-val         CI95%   cohen-d  \\\n",
+       "T-test  0.089906  3599.742464   two-sided  0.928367  [-0.09, 0.1]  0.002841   \n",
+       "\n",
+       "         BF10     power  \n",
+       "T-test  0.036  0.050925  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Teste de T-Student\n",
+    "# Um teste estatístico para verificar se existe uma diferença significativa entre as médias de 2 grupos\n",
+    "# H0 - Não há diferença significativa entre as médias dos grupos\n",
+    "# H1 - Há diferença significativa entre as médias dos grupos\n",
+    "grupo_good_weight = df_frutas[df_frutas['Quality'] == 1]['Weight']\n",
+    "grupo_bad_weight = df_frutas[df_frutas['Quality'] == 0]['Weight']\n",
+    "ttest(x=grupo_good_weight, y=grupo_bad_weight, paired=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a42a71b1",
+   "metadata": {},
+   "source": [
+    "Não há diferença significativa das médias de peso entre frutas boas e ruins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2529f208",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>T</th>\n",
+       "      <th>dof</th>\n",
+       "      <th>alternative</th>\n",
+       "      <th>p-val</th>\n",
+       "      <th>CI95%</th>\n",
+       "      <th>cohen-d</th>\n",
+       "      <th>BF10</th>\n",
+       "      <th>power</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>T-test</th>\n",
+       "      <td>16.396437</td>\n",
+       "      <td>3995.125489</td>\n",
+       "      <td>two-sided</td>\n",
+       "      <td>1.590329e-58</td>\n",
+       "      <td>[0.86, 1.09]</td>\n",
+       "      <td>0.51847</td>\n",
+       "      <td>7.576e+54</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                T          dof alternative         p-val         CI95%  \\\n",
+       "T-test  16.396437  3995.125489   two-sided  1.590329e-58  [0.86, 1.09]   \n",
+       "\n",
+       "        cohen-d       BF10  power  \n",
+       "T-test  0.51847  7.576e+54    1.0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grupo_good_sweetness = df_frutas[df_frutas['Quality'] == 1]['Sweetness']\n",
+    "grupo_bad_sweetness = df_frutas[df_frutas['Quality'] == 0]['Sweetness']\n",
+    "ttest(x=grupo_good_sweetness, y=grupo_bad_sweetness, paired=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ace2030e",
+   "metadata": {},
+   "source": [
+    "Há diferença significativa das médias de peso entre frutas boas e ruins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "bc1767ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>T</th>\n",
+       "      <th>dof</th>\n",
+       "      <th>alternative</th>\n",
+       "      <th>p-val</th>\n",
+       "      <th>CI95%</th>\n",
+       "      <th>cohen-d</th>\n",
+       "      <th>BF10</th>\n",
+       "      <th>power</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>T-test</th>\n",
+       "      <td>15.912978</td>\n",
+       "      <td>3951.450727</td>\n",
+       "      <td>two-sided</td>\n",
+       "      <td>2.602204e-55</td>\n",
+       "      <td>[0.82, 1.06]</td>\n",
+       "      <td>0.5031</td>\n",
+       "      <td>5.053e+51</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                T          dof alternative         p-val         CI95%  \\\n",
+       "T-test  15.912978  3951.450727   two-sided  2.602204e-55  [0.82, 1.06]   \n",
+       "\n",
+       "        cohen-d       BF10 power  \n",
+       "T-test   0.5031  5.053e+51   NaN  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grupo_good_size = df_frutas[df_frutas['Quality'] == 1]['Size']\n",
+    "grupo_bad_size = df_frutas[df_frutas['Quality'] == 0]['Size']\n",
+    "ttest(x=grupo_good_size, y=grupo_bad_size, paired=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54c1ea11",
+   "metadata": {},
+   "source": [
+    "Há diferença significativa das médias de peso entre frutas boas e ruins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "847a4c41",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
