Cria função para otimizar hiperparâmetros

--- a/classificacao_qualidade_frutas.ipynb
+++ b/classificacao_qualidade_frutas.ipynb
@@ -6961,12 +6961,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "67fe7ec3",
+   "metadata": {},
+   "source": [
+    "### Otimizar Hiperparâmetros"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "3aae8b8a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ajustar hiperparâmetros com Optuna\n",
+    "\n",
+    "# Hiperparâmetros penalty\n",
+    "# Regularização controla a complexidade do modelo, reduzindo overfitting\n",
+    "# L1 (Ridge) é util para fins de Feature Selection e para modelos esparsos. Soma dos valroes absolutos dos coeficientes\n",
+    "# L2 (Lasso) é util para evitar o overfitting, principalmente quando há multicolinearidade. Soma dos quadrados\n",
+    "\n",
+    "# Hiperparâmetro C\n",
+    "# Valores maiores de C, indeica uma regularização mais fraca\n",
+    "# Valores menores de C, indica uma regularização mais forte\n",
+    "\n",
+    "def lr_optuna(trial):\n",
+    "    penalty = trial.suggest_categorical('penalty', ['l1', 'l2'])\n",
+    "    c_values = trial.suggest_categorical('c', [100, 10, 1.0, 0.1, 0.01])\n",
+    "\n",
+    "    # Treinar modelo\n",
+    "    model_lr_optuna = LogisticRegression(solver='libinear', penalty=penalty, C=c_values)\n",
+    "    model_lr_optuna.fit(X_train, y_train)\n",
+    "\n",
+    "    y_decision_optuna = model_lr_optuna.decision_function(X_test)\n",
+    "\n",
+    "    # Calcular Curva ROC\n",
+    "    fpr, tpr, thresholds = roc_curve(y_test, y_decision_optuna)\n",
+    "\n",
+    "    # Calcular AUC\n",
+    "    roc_auc_optuna = auc(fpr, tpr)\n",
+    "\n",
+    "    # Retornar Predição\n",
+    "    y_pred_optuna = model_lr_optuna.predict(X_test)\n",
+    "\n",
+    "    # Calcular F1 Score\n",
+    "    f1_score_optuna = f1_score(y_test, y_pred_optuna, average='macro')\n",
+    "\n",
+    "    # Calcular BCE (Binary Cross Entropy - Erro)\n",
+    "    log_loss_optuna = log_loss(y_test, y_pred_optuna)\n",
+    "\n",
+    "    return roc_auc_optuna, f1_score_optuna, log_loss_optuna"
+   ]
   }
  ],
  "metadata": {
