Salva o modelo e cria a API

--- a/classificacao_qualidade_frutas.ipynb
+++ b/classificacao_qualidade_frutas.ipynb
@@ -9148,6 +9148,38 @@
     "# Apresentar resultados dos F1 Scores\n",
     "px.line(df_resultados_thresholds, x='cenario', y='resultado')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "958487b3",
+   "metadata": {},
+   "source": [
+    "### Salvar Modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "45d6e4a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['modelo_qualidade_frutas.pkl']"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Salvar Modelo\n",
+    "joblib.dump(model_lr, 'modelo_qualidade_frutas.pkl')"
+   ]
   }
  ],
  "metadata": {
